# the-Aleph

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
aleph/: __init__.py
aleph/adapters/: __init__.py  audio_adapter.py  base.py  interfaces.py  mock.py  nanobot.py
aleph/client/: __init__.py  context_builder.py  registry.py  session_manager.py  turn_builder.py
aleph/config/: __init__.py  client_loader.py
aleph/core/: __init__.py  aleph_engine.py  edge_gateway.py  foreground_controller.py  handoff_engine.py  memory_manager.py  projection_compiler.py  runtime_signal_collector.py  session_orchestrator.py  stream_emitter.py  switch_daemon.py
aleph/demo/: __init__.py  helpers.py  repl.py  scenario.py
aleph/domain/: __init__.py  models.py
aleph/lib/: __init__.py  ids.py
aleph/personas/: __init__.py  default_clients.py
aleph/service/: api.py  logging.py
aleph/storage/: __init__.py  sqlite_store.py
configs/clients/: demo.clients.json
docs/plans/: 2026-04-18-aleph-client-design.md  2026-04-18-aleph-mvp.md  2026-04-20-aleph-core-architecture.md  2026-04-20-aleph-demo-boundary-note.md  2026-04-20-aleph-framework-overview.md  2026-04-20-aleph-implementation-and-7day-plan.md  2026-04-20-aleph-public-schema-draft.md  2026-04-21-brookesia-aleph-integration.md
scripts/: repl.py  run_api.py  run_tests.py  scenario.py
src/: index.js
src/core/: aleph-engine.js  switch-daemon.js
src/demo/: helpers.js  (+2 more)
tests/: aleph-engine.test.js  test_aleph_engine.py  test_audio_adapter.py  test_framework_abstractions.py  test_service_foundations.py
(+3 files in other folders)
