[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph"
version = "0.1.0"
description = "Aleph v1: an agent-infra orchestration framework for isolated multi-agent clients."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.optional-dependencies]
service = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["aleph*"]
